# ai_agents_hw6

./: .env-example  .gitignore  README.md  pyproject.toml
config/: mcp_servers.json  rate_limits.json  setup.json
docs/: COST_AND_TOKEN_ANALYSIS.md  PLAN.md  PRD.md  PRD_decision_engine.md  PRD_game_engine.md  PRD_gmail_reporting.md  PRD_mcp_orchestration.md  PRD_mcp_transport.md  PRD_orchestrator.md  PRD_visualization.md  PROMPT_ENGINEERING_LOG.md  TODO.md
notebooks/: results_analysis.ipynb
src/cop_thief_mcp/: __init__.py  main.py
src/cop_thief_mcp/cli/: __init__.py  run_series.py  watch_game.py
src/cop_thief_mcp/orchestrator/: __init__.py  local_runner.py  mcp_policy.py  message_exchange.py
src/cop_thief_mcp/servers/: __init__.py  common.py  lifecycle.py
src/cop_thief_mcp/servers/cop_server/: __init__.py  server.py
src/cop_thief_mcp/servers/thief_server/: __init__.py  server.py
src/cop_thief_mcp/services/: __init__.py
src/cop_thief_mcp/shared/: __init__.py  async_bridge.py  config.py  constants.py  gatekeeper.py  json_loader.py  mcp_config.py  rate_limits_config.py  version.py
tests/integration/: test_llm_message_relay.py  test_local_full_run.py  test_local_runner_report.py  test_mcp_transport.py
tests/unit/cli/: test_watch_game.py
tests/unit/orchestrator/: test_mcp_policy.py  test_message_exchange.py
tests/unit/servers/: test_common.py  test_cop_server.py  test_lifecycle.py  test_thief_server.py
tests/unit/shared/: test_async_bridge.py  test_config.py  test_gatekeeper.py  test_mcp_config.py  test_rate_limits_config.py  test_version.py
(+41 files in other folders)
